# rmf_demos

./: Dockerfile  README.md
demos/: CHANGELOG.rst  CMakeLists.txt  package.xml
demos/launch/: airport_terminal.launch.xml  airport_terminal_caddy.launch.xml  battle_royale.launch.xml  clinic.launch.xml  clinic_2.launch.xml  common.launch.xml  dashboard.launch.xml  experimental_hotel.launch.xml  hotel.launch.xml  office.launch.xml  office_mock_traffic_light.launch.xml  simulation.launch.xml  triple_H.launch.xml
rmf_dashboard_resources/: .gitignore  CHANGELOG.rst  CMakeLists.txt  build_configuration.py  package.xml
rmf_dashboard_resources/airport_terminal/: dashboard_config.json  main.json
rmf_dashboard_resources/clinic/: dashboard_config.json
rmf_dashboard_resources/hotel/: dashboard_config.json
rmf_dashboard_resources/office/: dashboard_config.json  main.json
rmf_demo_maps/: CHANGELOG.rst  CMakeLists.txt  package.xml
rmf_demo_panel/: CHANGELOG.rst  README.md  package.xml  setup.cfg  setup.py
rmf_demo_panel/rmf_demo_panel/: api_server.py  gui_server.py
rmf_demos/: CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
rmf_demos/launch/: airport_terminal.launch.xml  battle_royale.launch.xml  campus.launch.xml  clinic.launch.xml  common.launch.xml  dashboard.launch.xml  easy_hotel.launch.xml  easy_office.launch.xml  experimental_hotel.launch.xml  home.launch.xml  home_world.launch.xml  hotel.launch.xml  ign_generate_dae.launch.xml  map_server.launch.py  office.launch.xml  office_chope_node.launch.xml  office_mock_traffic_light.launch.xml  office_reservation_node.launch.xml  reroute_demo.launch.xml  simulation.launch.xml  test_ackerman.launch.xml  test_ackman.launch.xml  triple_H.launch.xml
rmf_demos/sros2/: office.params.yaml  office_deploy.bash
rmf_demos_adapters/: CHANGELOG.md  package.xml  setup.cfg  setup.py
rmf_demos_assets/: CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  package.xml
rmf_demos_assets/hooks/: rmf_demos_assets.dsv.in
rmf_demos_bridges/: CHANGELOG.md  CHANGELOG.rst  package.xml  setup.cfg  setup.py
rmf_demos_bridges/rmf_demos_bridges/: fleet_robotmanager_mqtt_bridge.py  fleet_socketio_bridge.py
rmf_demos_dashboard_resources/: CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  build_configuration.py  package.xml
rmf_demos_dashboard_resources/airport_terminal/: app-config.json  main.json
rmf_demos_dashboard_resources/clinic/: app-config.json  dashboard_config.json
rmf_demos_dashboard_resources/home/: dashboard_config.json  main.json
rmf_demos_dashboard_resources/hotel/: app-config.json  dashboard_config.json  main.json
rmf_demos_dashboard_resources/office/: app-config.json  dashboard_config.json  main.json
rmf_demos_fleet_adapter/: .gitignore  CHANGELOG.md  CHANGELOG.rst  README.md  config.yaml  package.xml  setup.cfg  setup.py
rmf_demos_fleet_adapter/launch/: easy_fleet_adapter.launch.xml  fleet_adapter.launch.xml  read_only.launch.xml
rmf_demos_fleet_adapter/rmf_demos_fleet_adapter/: RobotClientAPI.py  RobotCommandHandle.py  Transformer.py  __init__.py  easy_fleet_adapter.py  fleet_adapter.py  fleet_manager.py  manage_lane.py  read_only_fleet_driver.py  read_only_publisher.py
rmf_demos_gz/: CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
rmf_demos_gz/launch/: airport_terminal.launch.xml  battle_royale.launch.xml  campus.launch.xml  clinic.launch.xml  easy_office.launch.xml  experimental_hotel.launch.xml  home.launch.xml  home_world.launch.xml  hotel.launch.xml  office.launch.xml  office_chope_node.launch.xml  office_mock_traffic_light.launch.xml  office_reservation_node.launch.xml  reroute_demo.launch.xml  reservation.launch.xml  simulation.launch.xml  test_ackman.launch.xml  triple_H.launch.xml
rmf_demos_gz_classic/: CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
rmf_demos_gz_classic/launch/: airport_terminal.launch.xml  battle_royale.launch.xml  campus.launch.xml  clinic.launch.xml  easy_hotel.launch.xml  easy_office.launch.xml  hotel.launch.xml  office.launch.xml  office_mock_traffic_light.launch.xml  reroute_demo.launch.xml  simulation.launch.xml  triple_H.launch.xml
rmf_demos_lift_adapter/: README.md  package.xml  setup.cfg  setup.py
rmf_demos_lift_adapter/launch/: lift_adapter.launch.xml
rmf_demos_lift_adapter/rmf_demos_lift_adapter/: LiftAPI.py  lift_adapter.py  lift_manager.py
rmf_demos_maps/: CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
rmf_demos_panel/: CHANGELOG.md  CHANGELOG.rst  QUALITY_DECLARATION.md  README.md  package.xml  setup.cfg  setup.py
rmf_demos_panel/rmf_demos_panel/: api_server.py  dispatcher_client.py  gui_server.py  integration_test.py  rmf_msg_observer.py  simple_api_server.py
rmf_demos_panel/task_lists/: airport_terminal_tasks.json  clinic_tasks.json  hotel_tasks.json  office_tasks.json
rmf_demos_tasks/: CHANGELOG.md  CHANGELOG.rst  QUALITY_DECLARATION.md  README.md  package.xml  setup.cfg  setup.py
rmf_demos_tasks/rmf_demos_tasks/: __init__.py  airport_docker_config.yaml  api_request.py  cancel_robot_task.py  cancel_task.py  cleaning_server.py  direct_go_to_place.py  direct_patrol.py  dispatch_action.py  dispatch_cart_delivery.py  dispatch_charge_battery.py  dispatch_clean.py  dispatch_delivery.py  dispatch_dynamic_event.py  dispatch_go_to_nearest_place.py  dispatch_go_to_place.py  dispatch_json.py  dispatch_loop.py  dispatch_multi_action.py  dispatch_multi_clean.py  dispatch_multi_delivery.py  dispatch_multi_stop.py  dispatch_multistop.py  dispatch_patrol.py  dispatch_teleop.py  dynamic_event_cancel_event.py  dynamic_event_client.py  dynamic_event_go_to_place.py  emergency_signal.py  get_robot_location.py  hotel_cleaner_config.yaml  mock_docker.py  request_ackmann_path.py  request_lift.py  request_loop.py  request_robot_path.py  reservation_dance.py  teleop_action.py  teleop_robot.py  wait_for_task_complete.py  (+1 more)
rmf_demos_tasks/test/: __init__.py  test_copyright.py  (+2 more)
(+624 files in other folders)
