<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>demos</name>
  <version>1.2.0</version>
  <description>Launch files for RMF demos</description>
  <maintainer email="yadunund@openrobotics.org">yadu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rmf_demo_maps</exec_depend>

  <exec_depend>rmf_traffic_ros2</exec_depend>
  <exec_depend>rmf_task_ros2</exec_depend>
  <exec_depend>rmf_fleet_adapter</exec_depend>
  <exec_depend>building_map_tools</exec_depend>
  <exec_depend>building_gazebo_plugins</exec_depend>

  <exec_depend>visualizer</exec_depend>

  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>rmf_demo_assets</exec_depend>
  <exec_depend>rmf_gazebo_plugins</exec_depend>
  <exec_depend>rmf_demo_tasks</exec_depend>
  <exec_depend>rmf_rviz_plugin</exec_depend>
  <exec_depend>rmf_demo_panel</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>launch_xml</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
