<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_demo_panel</name>
  <version>1.0.0</version>
  <description>Web based RMF Demo Panel</description>
  <maintainer email="youliang@openrobotics.org">yadu</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>building_map_msgs</exec_depend>
  <exec_depend>rmf_fleet_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
