<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_demos_adapters</name>
  <version>1.4.0</version>
  <description>Various Adapters for RMF Demos</description>
  <maintainer email="cnboonhan@openrobotics.org">Charayaphan Nakorn Boon Han</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rmf_fleet_adapter_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
