<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_demos_assets</name>
  <version>1.2.0</version>
  <description>Models and other media used for RMF demos</description>
  <maintainer email="yadunund@openrobotics.org">yadu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rmf_robot_sim_gazebo_plugins</exec_depend>
  <exec_depend>rmf_building_sim_gazebo_plugins</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
