<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_demos_bridges</name>
  <version>2.0.3</version>
  <description>Nodes for bridging between different communication stacks</description>
  <maintainer email="cnboonhan@openrobotics.org">Boon Han</maintainer>
  <license>Apache 2.0</license>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <exec_depend>rmf_fleet_msgs</exec_depend>
  <exec_depend>rmf_traffic_msgs</exec_depend>
  <exec_depend>rmf_building_map_tools</exec_depend>
  <exec_depend>rmf_site_map_msgs</exec_depend>
  <exec_depend>python3-paho-mqtt</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-pyproj</exec_depend>
  <exec_depend>python3-flask-socketio</exec_depend>

</package>
