<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_demos_dashboard_resources</name>
  <version>2.0.3</version>
  <description>Resource pack for RMF dashboard</description>
  <maintainer email="matiasbavera@gmail.com">Matías Bavera</maintainer>
  <maintainer email="marco@openrobotics.org">Marco A. Gutiérrez</maintainer>
  <maintainer email="yadunund@openrobotics.org">Yadunund</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
