<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_demos_lift_adapter</name>
  <version>2.0.2</version>
  <description>Example lift adapter to be used with rmf_demos simulations</description>
  <maintainer email="luca@openrobotics.org">Luca Della Vedova</maintainer>
  <license>Apache 2.0</license>

  <exec_depend>rmf_lift_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
