<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_demos_maps</name>
  <version>2.0.3</version>
  <description>A package containing demo maps for rmf</description>
  <maintainer email="aaron@openrobotics.org">Aaron Chong</maintainer>
  <maintainer email="marco@openrobotics.org">Marco A. Gutiérrez</maintainer>
  <maintainer email="yadunund@openrobotics.org">Yadunund</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rmf_building_map_tools</buildtool_depend>
  <buildtool_depend>ros2run</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
