<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_demos_tasks</name>
  <version>2.4.0</version>
  <description>A package containing scripts for demos</description>
  <author email= "grey@openrobotics.org">Grey</author>
  <maintainer email="yadunund@openrobotics.org">Yadunund</maintainer>
  <maintainer email="marco@openrobotics.org">Marco A. Gutiérrez</maintainer>
  <license>Apache Licence 2.0</license>

  <exec_depend>rmf_fleet_msgs</exec_depend>
  <exec_depend>rmf_task_msgs</exec_depend>
  <exec_depend>rmf_dispenser_msgs</exec_depend>
  <exec_depend>rmf_lift_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
